--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/jarno300/chaos-app/:latest .
+          docker build -t ghcr.io/jarno300/chaos-app:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/jarno300/chaos-app/:latest
+          docker push ghcr.io/jarno300/chaos-app:latest
