--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -17,6 +17,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      packages: write
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,8 +36,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/Jarno300/chaos-app:latest .
+          docker build -t ghcr.io/jarno300/chaos-app:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/Jarno300/chaos-app:latest
+          docker push ghcr.io/jarno300/chaos-app:latest
